      file extraction bug in gdebi
  * python/depcache.cc:
    - when using the actiongroup as a contextmanager incref/decref
      on enter and leave. this should fix the instablity issues
      that aptdaemon runs into (LP: #691134)
  * debian/python3-apt.install:
    - fix py3 extension module install location (thanks to
      Barry)

 -- Michael Vogt <mvo@debian.org>  Tue, 07 Dec 2010 13:41:07 +0100

python-apt (0.7.100.1) unstable; urgency=low

  [ Julian Andres Klode ]
  * python/generic.h: Fix a memory leak (leaking on every unicode string).
  * debian/control: add Replaces to python-apt-common, python3-apt; to
    avoid file conflicts with files previously in python-apt (Closes: #605136).

  [ Michael Vogt ]
  * python/generic.h:
    - set Object to NULL in CppDeallocPtr
  * python/depcache.cc:
    - don't run "actiongroup.release()" if the object was already
      deallocated
  * tests/test_apt_cache.py:
    - fix tests to work if apt compressed indexes are enabled

 -- Julian Andres Klode <jak@debian.org>  Sun, 12 Dec 2010 14:30:33 +0100

python-apt (0.7.100) unstable; urgency=low

  * Final 0.7.100 release; targeted at Squeeze.
  * apt/debfile.py:
    - Replace (undocumented) use of python-debian debfile.DebFile API with
      the equivalent apt_inst.DebFile API (Closes: #603043)
  * apt/package.py:
    - Fix docstring of Package.mark_delete() (Closes: #599042)
  * doc:
    - Various documentation updates.
    - The C++ API/ABI is stable now.
  * po
    - Update sl.po (Closes: #603359)

 -- Julian Andres Klode <jak@debian.org>  Wed, 17 Nov 2010 16:53:55 +0100

python-apt (0.7.98.1) unstable; urgency=low

  [ Piotr Ozarowski ]
  * Use dh_python3 to handle Python 3 files
    - bump minimum required versions of python-central and python3-all-dev
    - add new python3-apt, python3-apt-bdg and python-common binary packages
  * Replace python-central with dh_python2

 -- Michael Vogt <mvo@debian.org>  Wed, 29 Sep 2010 20:38:25 +0200
